--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "vite": "^2.4.4"
   },
   "dependencies": {
+    "@mui/material": "^5.1.1",
+    "@mui/styled-engine-sc": "^5.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
