--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
