--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     "@emotion/react": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.1.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.1"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.1",
+    "redux": "^4.1.2"
   }
 }
