--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@storybook/addon-actions": "^6.4.0-alpha.32",
-    "@storybook/addon-essentials": "^6.4.0-alpha.32",
-    "@storybook/addon-links": "^6.4.0-alpha.32",
-    "@storybook/react": "^6.4.0-alpha.32",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/react": "^6.3.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.13",
     "@types/react": "^17.0.18",
@@ -35,7 +35,7 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.1.1",
     "prettier": "2.3.2",
-    "storybook-builder-vite": "^0.0.12",
+    "storybook-builder-vite": "^0.1.10",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
