--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
     "redux": "^4.1.2"
+  },
+  "engines": {
+    "node": "16.11.1",
+    "npm": "8.0.0"
   }
 }
