--- a/package.json
+++ b/package.json
@@ -1,65 +1,30 @@
 {
-  "name": "vite-boilerplate",
-  "version": "0.0.0",
+  "name": "hamiti-app",
+  "version": "0.0.1",
   "scripts": {
-    "client:dev": "vite",
-    "client:build": "tsc && vite build",
-    "server:dev": "ts-node-dev --respawn --transpile-only --project tsconfig.server.json src/server.ts",
-    "server:build": "tsc --project tsconfig.server.json",
-    "build": "npm run server:build && npm run client:build && npm run storybook:build",
-    "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\" \"npm run storybook\"",
-    "serve": "vite preview",
-    "prepare": "husky install",
-    "test": "prettier --check . && eslint . && stylelint \"**/*.css\"",
-    "start": "node dist/server.js",
-    "storybook": "start-storybook -p 6006",
-    "storybook:build": "build-storybook -o dist/storybook"
+    "prepare": "./node_modules/.bin/husky install",
+    "postinstall": "npm i --prefix frontend && npm i --prefix backend && npm i --prefix infrastructure",
+    "client:dev": "npm run client:dev --prefix frontend",
+    "client:build": "npm run client:build --prefix frontend",
+    "prune:frontend": "npm prune --production --prefix frontend",
+    "build": "npm run build --prefix frontend",
+    "dev": "npm run dev --prefix frontend",
+    "serve": "npm run serve --prefix frontend",
+    "test": "npx prettier --check . && eslint . && stylelint \"frontend/**/*.css\"",
+    "storybook": "npm run storybook --prefix frontend",
+    "storybook:build": "npm run storybook:build --prefix frontend"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@storybook/addon-actions": "^6.4.3",
-    "@storybook/addon-essentials": "^6.4.3",
-    "@storybook/addon-links": "^6.4.3",
-    "@storybook/react": "^6.4.3",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.11.1",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "babel-loader": "^8.2.3",
-    "concurrently": "^6.4.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.1.1",
     "prettier": "2.3.2",
-    "storybook-builder-vite": "^0.1.10",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2",
-    "vite": "^2.6.14"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.2",
-    "@mui/styled-engine": "^5.2.0",
-    "@reduxjs/toolkit": "^1.6.2",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
-    "redux": "^4.1.2"
-  },
-  "engines": {
-    "node": "16.11.1",
-    "npm": "8.0.0"
+    "typescript": "^4.5.5"
   }
 }
